--- a/myinit.org
+++ b/myinit.org
@@ -211,8 +211,15 @@ Fow switching window easily
       (setq aw-background nil)
       (global-set-key (kbd "M-o") 'ace-window)
       (setq aw-keys '(?a ?s ?d ?f ?g ?h ?j ?k ?l))
-    )
-  )
+    ))
+
+  (use-package ace-jump-mode
+  :bind ("C-." . ace-jump-mode))
+
+  (use-package ace-flyspell
+  :bind
+  (:map flyspell-mode-map
+      ("C-M-i" . ace-flyspell-correct-word)))
 
 #+END_SRC
 
@@ -258,8 +265,7 @@ Buffer managerment, see more https://www.emacswiki.org/emacs/IbufferMode
 
 #+END_SRC
 
-* Swiper/Ivy/Counsel
-Swiper gives us a really efficient incremental search with regular expressions 
+* Swiper/Ivy/CounselSwiper gives us a really efficient incremental search with regular expressions 
 and Ivy / Counsel replace a lot of ido or helms completion functionality
 See more Swiper: https://github.com/abo-abo/swiper
 #+BEGIN_SRC emacs-lisp
@@ -271,6 +277,17 @@ See more Swiper: https://github.com/abo-abo/swiper
     :map ivy-minibuffer-map
     ("M-y" . ivy-next-line)))
 
+  (use-package counsel-ag-popup
+  :bind
+  (:map gpolonkai/pers-map
+   ("s" . counsel-ag-popup)))
+
+  (use-package counsel-projectile
+  :custom
+  (projectile-completion-system 'ivy)
+  :config
+  (counsel-projectile-mode))
+
   (use-package ivy
     :ensure t
     :diminish (ivy-mode)
@@ -280,6 +297,12 @@ See more Swiper: https://github.com/abo-abo/swiper
     (setq ivy-use-virtual-buffers t)
     (setq ivy-count-format "%d/%d ")
     (setq ivy-display-style 'fancy))
+
+  (use-package ivy-yasnippet
+  :after
+  yasnippet
+  :bind
+  (("C-c y" . ivy-yasnippet)))
 
 
   (use-package swiper
@@ -381,6 +404,15 @@ See more: http://company-mode.github.io/
 
   (use-package company-irony
   :ensure t)
+
+  (use-package company-shell)
+
+  (use-package company-c-headers)
+
+  (use-package company-emoji
+  :after company
+  :config
+  (add-to-list 'company-backends 'company-emoji))
 
 #+END_SRC
 
@@ -504,7 +536,8 @@ See more, https://github.com/joaotavora/yasnippet
 ** toml mode
 #+BEGIN_SRC emacs-lisp
 
-(use-package toml-mode)
+  (use-package toml-mode
+  :defer)
 
 #+END_SRC
 
@@ -540,7 +573,16 @@ See more, https://github.com/joaotavora/yasnippet
 
 #+END_SRC
 
-* Magit 
+** fish shell
+#+BEGIN_SRC emacs-lisp
+
+  (use-package fish-mode
+  :hook
+  (fish-mode . (lambda () (add-hook 'before-save-hook 'fish_indent-before-save))))
+
+
+#+END_SRC
+* Magit
 Git plugin
 See more, https://magit.vc/
 #+BEGIN_SRC emacs-lisp
@@ -560,6 +602,17 @@ See more, https://magit.vc/
     ("C-c x g" . magit-status)
     ("C-c x u" . magit-pull)
   ))
+
+
+  (use-package git-messenger
+  :bind ("C-x G" . git-messenger:popup-message)
+  :config
+  (setq git-messenger:show-detail t
+        git-messenger:use-magit-popup t))
+
+  (use-package git-timemachine
+  :bind ("C-c t" . git-timemachine))
+
 
 #+END_SRC
 
@@ -722,7 +775,11 @@ see more, https://github.com/editorconfig/editorconfig-emacs
 * Highlight indentation
 #+BEGIN_SRC emacs-lisp
 
-  (use-package highlight-indentation)
+  (use-package highlight-indentation
+  :hook
+  (python-mode . highlight-identation)
+  (go-mode . highlight-identation)
+  (rust-mode . highlight-identation))
 
 #+END_SRC
 
@@ -732,7 +789,7 @@ see more, https://github.com/editorconfig/editorconfig-emacs
   (use-package hl-line
   :config
   (when window-system
-   (global-hl-line-mode)))
+   (global-hl-line-mode t)))
 
 #+END_SRC
 
@@ -788,3 +845,132 @@ for all your spell-checking needs.
   (text-mode . flyspell-mode))
 
 #+END_SRC
+
+* goto last change
+#+BEGIN_SRC emacs-lisp
+
+  (use-package goto-last-change
+  :bind
+  (("M-g /" . goto-last-change)))
+
+#+END_SRC
+
+* fandy narrow
+#+BEGIN_SRC emacs-lisp
+
+  (use-package fancy-narrow
+  :config
+  (fancy-narrow-mode))
+
+#+END_SRC
+
+* autorevert
+automaticlly revert changed files
+#+BEGIN_SRC emacs-lisp
+
+  (use-package autorevert
+  :config
+  (global-auto-revert-mode 1))
+
+  (use-package electric
+  :config
+  (electric-indent-mode 1))
+
+  (use-package savehist
+  :config
+  (savehist-mode 1))
+
+#+END_SRC
+
+* speed bar
+#+BEGIN_SRC emacs-lisp
+
+  (use-package speedbar)
+
+#+END_SRC
+
+* spinner
+display running background tasks
+#+BEGIN_SRC emacs-lisp
+
+  (use-package spinner)
+
+#+END_SRC
+
+* form feed
+show form feeds as a horizontal line
+#+BEGIN_SRC emacs-lisp
+
+  (use-package form-feed
+  :hook
+  (emacs-lisp-mode . form-feed-mode)
+  (compilation-mode . form-feed-mode)
+  (help-mode . form-feed-mode))
+
+#+END_SRC
+
+* golden ration
+#+BEGIN_SRC emacs-lisp
+
+  (use-package golden-ratio
+  :config
+  (add-to-list 'golden-ratio-extra-commands 'ace-window)
+  (golden-ratio-mode t))
+
+#+END_SRC
+
+* anzu
+show number of matches in the mode line when searching
+#+BEGIN_SRC emacs-lisp
+
+  (use-package anzu
+  :delight
+  :config
+  (global-anzu-mode 1))
+
+#+END_SRC
+* ag
+#+BEGIN_SRC emacs-lisp
+
+  (use-package projectile
+  :delight '(:eval (concat " [" projectile-project-name "]"))
+  :pin melpa-stable
+  :config
+  (projectile-mode t)
+  :bind
+  (:map projectile-mode-map
+   ("C-c p" . projectile-command-map)))
+
+  (use-package ag
+  :after projectile
+  :bind
+  (:map projectile-mode-map
+      ("C-c p C-a" . ag-projectile)))
+
+#+END_SRC
+
+* loccur
+#+BEGIN_SRC emacs-lisp
+
+    (defun gpolonkai/toggle-loccur ()
+      "Toggle `loccur-mode'.
+
+    If `loccur-mode' is not active, starts it (which, in turn, will ask for the
+    pattern to look for).  If it is active, it will disable it."
+      (interactive)
+      (if loccur-mode
+	  (loccur-mode nil)
+	(call-interactively 'loccur)))
+
+    (use-package loccur
+      :bind
+      (:map gpolonkai/pers-map
+       ("C-o" . gpolonkai/toggle-loccur)))
+
+#+END_SRc
+  
+
+
+
+
+
