--- a/myinit.org
+++ b/myinit.org
@@ -203,10 +203,13 @@ Document: http://www.dr-qubit.org/undo-tree/undo-tree.txt
 #+BEGIN_SRC emacs-lisp
 
   (use-package undo-tree
-    :ensure t
-    :init
-    (global-undo-tree-mode 1)
-    (global-set-key (kbd "C-z") 'undo))
+  :ensure t
+  :init
+  (global-undo-tree-mode 1)
+  (global-set-key (kbd "C-z") 'undo)
+  :config
+  (setq undo-tree-auto-save-history t)
+  (setq undo-tree-history-directory-alist '(("." . "~/.emacs.d/undo"))))
 
 #+END_SRC
 
@@ -497,8 +500,7 @@ See more, https://github.com/joaotavora/yasnippet
 
 #+END_SRC
 
-* lsp mode
-   
+* lsp mode   
 #+BEGIN_SRC emacs-lisp
 
   (use-package lsp-mode
@@ -512,6 +514,7 @@ See more, https://github.com/joaotavora/yasnippet
   (use-package lsp-ui)
 
 #+END_SRC
+
 * languages
 ** go mode
 #+BEGIN_SRC emacs-lisp
@@ -943,6 +946,7 @@ show number of matches in the mode line when searching
   (global-anzu-mode 1))
 
 #+END_SRC
+
 * ag
 #+BEGIN_SRC emacs-lisp
 
@@ -999,3 +1003,16 @@ show number of matches in the mode line when searching
 
 #+END_SRC
   
+
+* conventional-changelog
+#+BEGIN_SRC emacs-lisp
+
+  (use-package conventional-changelog
+  :init
+  (with-eval-after-load 'magit-tag
+    (transient-append-suffix 'magit-tag
+     '(1 0 -1)
+     '("c" "changelog" conventional-changelog-menu))))
+
+
+#+END_SRC
