--- a/myinit.org
+++ b/myinit.org
@@ -512,6 +512,12 @@ See more, https://github.com/joaotavora/yasnippet
 
 * lsp mode   
 #+BEGIN_SRC emacs-lisp
+(setq lsp-log-io nil) ;; Don't log everything = speed
+(setq lsp-keymap-prefix "C-c l")
+(setq lsp-restart 'auto-restart)
+(setq lsp-ui-sideline-show-diagnostics t)
+(setq lsp-ui-sideline-show-hover t)
+(setq lsp-ui-sideline-show-code-actions t)
 
   (use-package lsp-mode
   :commands lsp
@@ -541,7 +547,6 @@ See more, https://github.com/joaotavora/yasnippet
   (go-mode . lsp))
 
 #+END_SRC
-
 ** rust mode  
 #+BEGIN_SRC emacs-lisp
 
@@ -597,6 +602,13 @@ See more, https://github.com/joaotavora/yasnippet
   (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-mode)))
 
 #+END_SRC
+** json mode
+#+BEGIN_SRC emacs-lisp
+
+  (use-package json-mode
+  :ensure t)
+
+#+END_SRC
 ** markdown mode
 #+BEGIN_SRC emacs-lisp
 
@@ -621,6 +633,13 @@ See more, https://github.com/joaotavora/yasnippet
 
 
 #+END_SRC
+** web mode
+#+BEGIN_SRC emacs-lisp
+
+
+  
+#+END_SRC
+
 * Magit
 Git plugin
 See more, https://magit.vc/
